helm/nginx-ingress-controller/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: nginx-ingress
  spec:
    ingressClassName: nginx
    rules:
      - host: aa5d597798b7442f387892d527f2564b-f9b6bc5e17f178fc.elb.eu-west-1.amazonaws.com
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: nginx-expose
                  port:
                    number: 80
              path: /
