helm/nginx-ingress-controller/nginx2-ingress.yml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: argocd-ingress
    namespace: argocd
  spec:
    ingressClassName: nginx
    rules:
      - host: argocd
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: nginx-service
                  port:
                    number: 80
              path: /
